# barbearia-site

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  BACKUP.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  LICENSE  Makefile  OPERATIONS.md  README.md  SECURITY.md  create_tables.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  render.yaml  test_api.py  test_flow.py  tmp_login.json  tmp_payload.json  tmp_svc.json  tmp_token.txt
backend/: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh  start_render.sh
backend/alembic/: alembic.ini  env.py  script.py.mako
backend/alembic/versions/: 001_add_themes_ai_tokens.py  002_add_tenant_branding_theme.py
backend/app/: __init__.py
backend/app/core/: __init__.py  config.py  exceptions.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/cache/: null_cache.py
backend/app/infrastructure/database/: __init__.py  base.py  session.py
backend/app/integrations/: __init__.py  agents.py
backend/app/modules/: __init__.py
backend/app/modules/admin/: __init__.py
backend/app/modules/admin/presentation/: __init__.py  routes.py
backend/app/modules/analytics/: __init__.py
backend/app/modules/analytics/application/: __init__.py  analytics_service.py  kpi_registry.py
backend/app/modules/analytics/domain/: __init__.py  entities.py
backend/app/modules/analytics/infrastructure/: __init__.py  repository.py
backend/app/modules/analytics/presentation/: routes.py  (+1 more)
backend/app/modules/audit/: __init__.py
backend/app/modules/auth/: __init__.py
backend/app/modules/customer/: __init__.py
backend/app/modules/media/: __init__.py
backend/app/modules/notification/: __init__.py
backend/app/modules/payment/: __init__.py
backend/app/modules/scheduling/: __init__.py
backend/app/modules/tenant/: __init__.py
backend/app/presentation/: __init__.py
backend/app/presentation/api/: agent_routes.py  app.py  health_services.py
backend/app/shared/: __init__.py
backend/docker/: Dockerfile  init-db.sql
backend/scripts/: create_tables.py  create_user.py  fix_lazy.py  fix_lazy2.py  seed_plans.py  setup.py  start.sh  test_orm_insert.py  test_raw_insert.py  test_service.py
backend/src/application/: __init__.py
backend/src/core/: __init__.py
backend/src/core/config/: __init__.py  settings.py
backend/src/core/exceptions/: __init__.py  exceptions.py
backend/src/core/logging/: __init__.py  logger.py
backend/src/core/security/: __init__.py  security.py
backend/src/domain/: __init__.py  base_entity.py  base_value_object.py
backend/src/infrastructure/: __init__.py
backend/src/infrastructure/cache/: __init__.py  redis_client.py
backend/src/infrastructure/database/: __init__.py  base.py  session.py
backend/src/infrastructure/http/: __init__.py  client.py
backend/src/presentation/: __init__.py
backend/src/presentation/api/: __init__.py  app.py  health.py  routes.py  system.py
backend/src/presentation/middleware/: __init__.py  error_handler.py  request_id.py  security_headers.py
backend/src/presentation/schemas/: __init__.py  common.py
backend/src/shared/: __init__.py
backend/tests/: conftest.py  test_agents.py
backend/tests/conftest/: __init__.py  conftest.py
backend/tests/e2e/: test_e2e_flow.py
backend/tests/integration/: test_integration.py
backend/tests/unit/: test_admin.py  test_analytics.py  test_auth.py  test_customer.py  test_exceptions.py  test_health.py  test_marketing.py  test_media.py  test_notification.py  test_owasp.py  test_payment.py  test_providers.py  test_scheduling.py  test_security.py  test_site.py  test_staff.py  test_tenant.py
(+337 files in other folders)
